--- a/client/src/modules/estilos/home.css
+++ b/client/src/modules/estilos/home.css
@@ -29,8 +29,6 @@
     border-radius: 12px;
 }
 
-/* #btnBusqueda{
-    font-size: 25px;
-    border-radius: 12px;
-    margin-left: 5px;
+/* .conthomecompleto{
+  dis
 } */
