--- a/client/src/modules/estilos/home.css
+++ b/client/src/modules/estilos/home.css
@@ -4,7 +4,7 @@
   height: 95.4%;
   width: 100%;
 }
-.conthomecompleto{
+.conthomecompleto {
   display: flex;
 }
 .contenedorph {
@@ -18,19 +18,29 @@
 #listadoPaisesHome {
   flex-flow: row wrap;
   margin: 30px;
+  margin-bottom: 10px;
   display: flex;
   width: 100%;
   height: 90%;
   justify-content: center;
 }
-.busquedaHome{
-    margin: 10px;
+.busquedaHome {
+  margin-left: -50px;
+  display: flex;
+  margin: 10px;
+  justify-content: flex-start;
 }
-#inputBusq{
-    font-size: 25px;
-    border-radius: 12px;
+#inputBusq {
+  margin-left: 15px;
+  font-size: 25px;
+  border-radius: 12px;
 }
-
+.contenedorOrdenamiento {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+}
 /* .conthomecompleto{
   dis
 } */
