--- a/client/src/modules/estilos/ordenfiltro.css
+++ b/client/src/modules/estilos/ordenfiltro.css
@@ -1,5 +1,40 @@
 .contOrdenFiltro{
-    background-color: rgba(255, 255, 255, 0.684);
+    background-color: rgba(255, 255, 255, 0.788);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    border-radius: 12px;
+    height: 50%;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 300px;
+    margin-right: 50px;
+
+}
+
+.ordenSpan{
+    font-size: 23px;
+    margin: 3px;
+}
+
+.ordenSelecasd{
+    font-size: 18px;
+    margin: 3px;
+    border-radius: 12px;
+}
+
+#btnBorrarFiltros{
+    font-size: 18px;
+    margin: 3px;
+    border-radius: 12px;
+    background-color: white;
+    color: red;
+    border-color: red;
+}
+#btnBorrarFiltros:hover{
+    font-size: 18px;
+    margin: 3px;
+    border-radius: 12px;
+    background-color: red;
+    color: white;
+    border-color: white;
 }
