--- a/client/src/modules/estilos/ordenfiltro.css
+++ b/client/src/modules/estilos/ordenfiltro.css
@@ -1,5 +1,5 @@
 .contOrdenFiltro{
-    background-color: rgba(255, 255, 255, 0.788);
+    background-color: rgba(0, 0, 0, 0.879);
     display: flex;
     flex-direction: row;
     border-radius: 12px;
@@ -8,12 +8,14 @@
     align-items: center;
     margin-left: 300px;
     margin-right: 50px;
-
+    border-style: solid;
+    border-color: blue;
 }
 
 .ordenSpan{
     font-size: 23px;
     margin: 3px;
+    color: white;
 }
 
 .ordenSelecasd{
@@ -27,14 +29,14 @@
     margin: 3px;
     border-radius: 12px;
     background-color: white;
-    color: red;
-    border-color: red;
+    color: blue;
+    border-color: blue;
 }
 #btnBorrarFiltros:hover{
     font-size: 18px;
     margin: 3px;
     border-radius: 12px;
-    background-color: red;
+    background-color: blue;
     color: white;
     border-color: white;
 }
