--- a/client/src/modules/estilos/pais.css
+++ b/client/src/modules/estilos/pais.css
@@ -1,13 +1,17 @@
 .CardPaisHome{
-    background-color: rgba(255, 255, 255, 0.731);
+    background-color: rgba(0, 0, 0, 0.917);
     height: 280px;
     width: 250px;
     display: flex;
     flex-direction: column;
-    margin: 50px;
+    margin: 45px;
+    margin-top: 30px;
     justify-content: flex-start;
     align-items: center;
     border-radius: 12px;
+    border: 2px;
+    border-style: solid;
+    border-color: blue;
 }
 
 .imgCard{
@@ -19,13 +23,13 @@
 }
 #nombreDePais{
     margin: 5px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 25px;
     font-weight: bold;
 }
 #continenteDePais{
     margin: 10px;
-    color: rgb(0, 0, 0);
+    color: rgb(199, 199, 199);
 }
 
 a:link, a:visited, a:active {
