--- a/client/src/modules/estilos/detallepais.css
+++ b/client/src/modules/estilos/detallepais.css
@@ -33,11 +33,12 @@
 }
 
 #imgdetail {
-  margin-top: 30px;
+  margin-top: 20px;
   max-width: 70%;
   min-width: 70%;
-  max-height: 40%;
-  max-height: 40%;
+  max-height: 35%;
+  min-height: 35%;
+
 }
 
 .nombredetail {
